--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul>
                   <li><a href="#about">About</a></li>
                   <li><a href="#gallery">Gallery</a></li>
-                  <li><a href="#stories">Stories</a></li>
+                  <li><a href="#stories">Projects</a></li>
                   <li><a href="#donate-main">Donate</a></li>
                   <li><a href="#contact">Get In Touch</a></li>
                 </ul>
