--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="https://kit.fontawesome.com/d13e26e731.js" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/lightbox.min.css">
@@ -126,7 +125,7 @@
           </a> 
         </div>
         <div class="gal gal-4">
-          <a href="./img/mountain-3.jpeg" 
+          <a href="./img/mountain-3.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
@@ -186,7 +185,7 @@
             <h2>Our Projects</h2>
             <p>In order to provide for the needs of the villagers, we are constantly consulting with village committees to ensure that the help given will provide the maximum benefit. Our current projects are focused on villagers near to Begnas Tal.
             <br>
-            Since the creation of the Nepal Life Improvement Foundation, more that 25 families have been fed during the COVID-19 pandemic lockdown. Homes on the brink of collapse have been renovated, and essential pathways have been completed. Each project gives us more reasons to continue this good work.</p>
+            Since the creation of the Nepal Life Improvement Foundation, more than 25 families have been fed during the COVID-19 pandemic lockdown. Homes on the brink of collapse have been renovated, and essential pathways have been completed. Each project gives us more reasons to continue this good work.</p>
             <a href="testimonials.html" class="btn btn-outline btn-secondary">
               <i class="fas fa-chevron-right"></i>  Read More</a>
           </div>
@@ -527,6 +526,13 @@
             <div>
               <h4>Maury Mason</h4>
               <p>Chairman of the Board</p>
+            </div>
+          </div>
+          <div class="dc">
+            <img src="./img/team/maury-lily-cropped.jpg" alt="">
+            <div>
+              <h4>Lillian Mason</h4>
+              <p>Director of Communications</p>
             </div>
           </div>
         </div>
