--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             <p>In order to provide for the needs of the villagers, we are constantly consulting with village committees to ensure that the help given will provide the maximum benefit. Our current projects are focused on villagers near to Begnas Tal.
             <br>
             Since the creation of the Nepal Life Improvement Foundation, more than 25 families have been fed during the COVID-19 pandemic lockdown. Homes on the brink of collapse have been renovated, and essential pathways have been completed. Each project gives us more reasons to continue this good work.</p>
-            <a href="testimonials.html" class="btn btn-outline btn-secondary">
-              <i class="fas fa-chevron-right"></i>  Read More</a>
+            <a href="#donate-main" class="btn btn-outline btn-secondary">
+              <i class="fas fa-chevron-right"></i>  Donate</a>
           </div>
         </div>
     </section>
