--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/utilities.css">
   <link rel="stylesheet" media="screen and (max-width: 984px)" href="css/mobile.css">
   <title>Nepal Life Improvement Foundation</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
 </head>
 <body id="home">
   <!-- navbar -->
@@ -518,21 +519,21 @@
             <img src="./img/team/hair.jpg" alt="">
             <div>
               <h4>Robbie Prokop</h4>
-              <p>Executive Director</p>
+
             </div>
           </div>
           <div class="vp">
             <img src="./img/team/maury-lily-cropped.jpg" alt="">
             <div>
               <h4>Maury Mason</h4>
-              <p>Chairman of the Board</p>
+
             </div>
           </div>
           <div class="dc">
             <img src="./img/team/maury-lily-cropped.jpg" alt="">
             <div>
               <h4>Lillian Mason</h4>
-              <p>Director of Communications</p>
+
             </div>
           </div>
         </div>
