--- a/index.html
+++ b/index.html
@@ -54,22 +54,26 @@
         <div class="icons icons-1">
           <img src="./icons/kindness.svg" alt="">
           <div>
-            <h3>Helping Those Less Fortunate</h3>         
-            <p>We search for those with the most need for help, and we provide that help</p>
+            <h3>Assisting Those Experiencing Hardship</h3>         
+            <p>Our focus is on small scale projects for individual and families, on level of urgency
+              and basic needs</p>
           </div>
         </div>
         <div class="icons icons-2">
           <img src="./icons/communication.svg" alt="">
           <div>
             <h3>Working Directly with Villagers</h3>         
-            <p>Consulting with the Villagers to figure out what is most essential </p>
+            <p>Consulting with villagers to determine how best to improve their lives in both short
+              and long term capacities. Partnering with community leaders to increase employment
+              opportunities</p>
           </div>
         </div>
         <div class="icons icons-3">
           <img src="./icons/respect.svg" alt="">
           <div>
             <h3>An Opportunity For Generosity</h3>         
-            <p>Make a donation to show the true generosity that you possess</p>
+            <p>Make a donation. An opportunity for those to share their good fortune with others
+facing hardship due merely to the circumstances of their birth</p>
           </div>
         </div>
       </div>
@@ -87,7 +91,15 @@
         <div class="column">
           <div class="column-2">
             <h2>Why We Started</h2>
-            <p>Maury Mason has been in Nepal for 5 months every year since the 2015 earthquake. Since then, he has been making many personal donations to help people from the villages near Begnas Tal who had lost their homes during the earthquake. Multiple homes were built thanks to Maury’s donations. In early 2019, Robbie Prokop went to Nepal to visit Maury Mason. After witnessing the extreme poverty that many of the Nepalese villagers were still living in, they decided to expand the help that they were giving by starting the Nepal Life Improvement Foundation.</p>
+            <p>Nepal Life Improvement Foundation officially formed in 2019. Prior to this, our founder Maury
+              Mason, had been helping those in the community of Pachabaya, a village 200 kilometers west of
+              Kathmandu, near the city of Pokhara since 2015. The contributions were to help people recover
+              from the earthquake damage and resulting economic hardships of that year. The first projects
+              began with rebuilding and repairing damaged homes and expanded to projects improving village
+              infrastructure including pathways, stairs and connecting homes to water and hydro. In
+              November 2019, along with Robbie Prokop we were officially incorporated as a Canadian Non
+              Profit Organization. In 2020 Lilly Mason came on board, and helped to expand our fundraising
+              base which has enabled us to take on more projects.</p>
             <a href="#donate" class="btn btn-outline btn-about">
               <i class="fas fa-chevron-right"></i>  Make a Donation</a>
           </div>
@@ -184,11 +196,10 @@
         <div class="column">
           <div class="column-2">
             <h2>Our Projects</h2>
-            <p>In order to provide for the needs of the villagers, we are constantly consulting with village committees to ensure that the help given will provide the maximum benefit. Our current projects are focused on villagers near to Begnas Tal.
-            <br>
-            Since the creation of the Nepal Life Improvement Foundation, more than 25 families have been fed during the COVID-19 pandemic lockdown. Homes on the brink of collapse have been renovated, and essential pathways have been completed. Each project gives us more reasons to continue this good work.</p>
+            <p>In order to provide for the needs of the villagers, we are constantly consulting with village committees to ensure that the help given will provide the maximum benefit. Our current projects are focused on villagers near to Begnas Tal. To read more about our current and past projects, click 
+            </p>
             <a href="#donate-main" class="btn btn-outline btn-secondary">
-              <i class="fas fa-chevron-right"></i>  Donate</a>
+              <i class="fas fa-chevron-right"></i>  Read More</a>
           </div>
         </div>
     </section>
