--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ facing hardship due merely to the circumstances of their birth</p>
         <div class="column">
           <div class="column-2">
             <h2>Our Projects</h2>
-            <p>In order to provide for the needs of the villagers, we are constantly consulting with village committees to ensure that the help given will provide the maximum benefit. Our current projects are focused on villagers near to Begnas Tal. To read more about our current and past projects, click 
+            <p>In order to provide for the needs of the villagers, we are constantly consulting with village committees to ensure that the help given will provide the maximum benefit. Our current projects are focused on villagers near to Begnas Tal. To read more about our current and past projects, click on the button below
             </p>
             <a href="#donate-main" class="btn btn-outline btn-secondary">
               <i class="fas fa-chevron-right"></i>  Read More</a>
