--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ facing hardship due merely to the circumstances of their birth</p>
 
     </section>
 
-    <!-- Stories -->
+    <!-- Projects -->
     <section id="stories" class="section-margin blog flex-columns flex-reverse">
       <div class="row">
         <div class="column">
@@ -198,7 +198,7 @@ facing hardship due merely to the circumstances of their birth</p>
             <h2>Our Projects</h2>
             <p>In order to provide for the needs of the villagers, we are constantly consulting with village committees to ensure that the help given will provide the maximum benefit. Our current projects are focused on villagers near to Begnas Tal. To read more about our current and past projects, click on the button below
             </p>
-            <a href="#donate-main" class="btn btn-outline btn-secondary">
+            <a href="./projects.html" class="btn btn-outline btn-secondary">
               <i class="fas fa-chevron-right"></i>  Read More</a>
           </div>
         </div>
@@ -562,7 +562,7 @@ facing hardship due merely to the circumstances of their birth</p>
           <div class="column">
             <div class="column-2 .bg-light">
               <h2>Get in Touch</h2>
-              <form action="POST" data-netlify="true" class="contact-form">
+              <form name="contact" method="POST" data-netlify="true" class="contact-form">
                 <div class="form-control">
                   <label for="name"></label>
                   <input type="text" name="name" id="name" placeholder="Name">
