--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <main>
     <!-- About Icons -->
-    <section id="about" class="icons bg-light">
+    <section id="about" class="icons bg-white">
       <div class="flex-items">
         <div class="icons icons-1">
           <img src="./icons/kindness.svg" alt="">
@@ -582,7 +582,7 @@ facing hardship due merely to the circumstances of their birth</p>
                 <div class="field">
                   <div data-netlify-recaptcha="true"></div>
                 </div>
-                <button type="submit" value="Send" id="submit" class="btn btn-contact">Send</button>
+                <button type="submit" id="submit" class="btn btn-contact">Send</button>
               </form>
             </div>
 
