--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
   
       <div class="content">
         <h1>Projects</h1>
-        <a href="#donate-main" class="btn">
+        <a href="index.html#donate-main" class="btn">
           <i class="fas fa-chevron-right"></i>  Donate</a>
       </div>
     </header>
