--- a/index.html
+++ b/index.html
@@ -579,9 +579,9 @@ facing hardship due merely to the circumstances of their birth</p>
                   <label for="message"></label>
                   <textarea name="message" id="subject" placeholder="Write a Message"></textarea>
                 </div>
-                <div class="field">
+                <!-- <div class="field">
                   <div data-netlify-recaptcha="true"></div>
-                </div>
+                </div> -->
                 <button type="submit" id="submit" class="btn btn-contact">Send</button>
               </form>
             </div>
