--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ facing hardship due merely to the circumstances of their birth</p>
           </a>
         </div>        
         <div class="gal gal-5">
-          <a href="./img/Nepal/villagers-boys.jpg" 
+          <a href="./img/Nepal/begnas-lake.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
