--- a/index.html
+++ b/index.html
@@ -138,21 +138,21 @@ facing hardship due merely to the circumstances of their birth</p>
           </a> 
         </div>
         <div class="gal gal-4">
-          <a href="./img/mountain-3.jpg" 
+          <a href="./img/Nepal/begnas-lake.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
           </a>
         </div>        
         <div class="gal gal-5">
-          <a href="./img/Nepal/begnas-lake.jpg" 
+          <a href="./img/Nepal/misty-village.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-6">
-          <a href="./img/Nepal/mountain-village.jpg" 
+          <a href="./img/mountain-3.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
@@ -541,7 +541,7 @@ facing hardship due merely to the circumstances of their birth</p>
             </div>
           </div>
           <div class="dc">
-            <img src="./img/team/maury-lily-cropped.jpg" alt="">
+            <img src="./img/team/lilly.jpg" alt="">
             <div>
               <h4>Lillian Mason</h4>
 
