--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ facing hardship due merely to the circumstances of their birth</p>
           </a>
         </div>        
         <div class="gal gal-5">
-          <a href="./img/Nepal/misty-village.jpg" 
+          <a href="./img/Nepal/bandipur.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
@@ -174,7 +174,7 @@ facing hardship due merely to the circumstances of their birth</p>
           </a>
         </div>
         <div class="gal gal-9">
-          <a href="./img/Nepal/temple-2.jpg" 
+          <a href="./img/Nepal/misty-village.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
