--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ facing hardship due merely to the circumstances of their birth</p>
           <div class="maintenance">
             <div class="maintenance-txt">
               <h3>Under Maintenance</h3>
-              <p>To make a donation, please send an etransfer to nepallif@gmail.com</p>
+              <p>To make a donation, please send an etransfer to nepallif@gmail.com. For international donations, please send an email to nepallif@gmail.com for banking details.</p>
             </div>
           </div>
             <form action="POST" data-netlify="true">
