--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ facing hardship due merely to the circumstances of their birth</p>
                 <!-- <div class="field">
                   <div data-netlify-recaptcha="true"></div>
                 </div> -->
-                <button type="submit" id="submit" class="btn btn-contact">Send</button>
+                <button type="submit" class="btn btn-contact">Send</button>
               </form>
             </div>
 
