--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <!-- <img src="./img/rainbow.jpeg" alt=""> -->
+
             <img src="./img/Nepal/begnas-boat-1.jpg" alt="">
           </div>
         </div>
@@ -100,13 +100,36 @@ facing hardship due merely to the circumstances of their birth</p>
               November 2019, along with Robbie Prokop we were officially incorporated as a Canadian Non
               Profit Organization. In 2020 Lilly Mason came on board, and helped to expand our fundraising
               base which has enabled us to take on more projects.</p>
-            <a href="#donate" class="btn btn-outline btn-about">
+            <a href="#donate-main" class="btn btn-outline btn-about">
               <i class="fas fa-chevron-right"></i>  Make a Donation</a>
           </div>
         </div>
       </div>
     </section>
 
+    <!-- Current Focus -->
+    <section id="focus" class="section-margin flex-columns flex-reverse">
+      <header class="section-header">
+        <h2>Current Focus</h2>
+      </header>
+
+      <div class="row focus">
+        <div class="column">
+          <div class="column-1">
+            <img src="./img/Nepal/landslide-3.jpeg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2">
+            <h2>Landslide Prevention</h2>
+            <p>Monsoon season is a tough time of year for many villagers in Nepal. Not only is it the low tourist season, which means lower income for people who already suffer economical difficulties, but it is also a time when many landslides occur. Sometimes the landslides are small enough that nobody gets harmed, but other times landslides bring houses down the side the side of a mountain. This can leave the villagers homeless, with very little they can do to get back on their feet. One of our main focuses is to fortify at risk homes before the end of the monsoon season. 
+            </p>
+            <a href="#donate-main" class="btn btn-outline">
+              <i class="fas fa-chevron-right"></i>  Donate Now</a>
+          </div>
+        </div>
+
+    </section>
 
     <!-- Photo Gallery -->
     <section id="gallery" class="section-margin photos flex-grid section-padding">
@@ -186,7 +209,7 @@ facing hardship due merely to the circumstances of their birth</p>
     </section>
 
     <!-- Projects -->
-    <section id="stories" class="section-margin blog flex-columns flex-reverse">
+    <section id="stories" class="section-margin blog flex-columns">
       <div class="row">
         <div class="column">
           <div class="column-1">
