--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ facing hardship due merely to the circumstances of their birth</p>
         </div>
         <div class="column">
           <div class="column-2">
-            <h2>Landslide Prevention</h2>
+            <h2>Landslide Restoration</h2>
             <p>Monsoon season is a tough time of year for many villagers in Nepal. Not only is it the low tourist season, which means lower income for people who already suffer economical difficulties, but it is also a time when many landslides occur. Sometimes the landslides are small enough that nobody gets harmed, but other times landslides bring houses down the side the side of a mountain. This can leave the villagers homeless, with very little they can do to get back on their feet. One of our main focuses is to fortify at risk homes before the end of the monsoon season. 
             </p>
             <a href="#donate-main" class="btn btn-outline">
@@ -556,17 +556,17 @@ facing hardship due merely to the circumstances of their birth</p>
 
             </div>
           </div>
-          <div class="vp">
-            <img src="./img/team/maury-lily-cropped.jpg" alt="">
-            <div>
-              <h4>Maury Mason</h4>
-
-            </div>
-          </div>
           <div class="dc">
             <img src="./img/team/lilly.jpg" alt="">
             <div>
               <h4>Lillian Mason</h4>
+
+            </div>
+          </div>
+          <div class="vp">
+            <img src="./img/team/maury-lily-cropped.jpg" alt="">
+            <div>
+              <h4>Maury Mason</h4>
 
             </div>
           </div>
