--- a/index.html
+++ b/index.html
@@ -556,17 +556,17 @@ facing hardship due merely to the circumstances of their birth</p>
 
             </div>
           </div>
-          <div class="dc">
-            <img src="./img/team/lilly.jpg" alt="">
+          <div class="vp">
+            <img src="./img/team/maury-lives-crop.jpg" alt="">
             <div>
-              <h4>Lillian Mason</h4>
+              <h4>Maury Mason</h4>
 
             </div>
           </div>
-          <div class="vp">
-            <img src="./img/team/maury-lily-cropped.jpg" alt="">
+          <div class="dc">
+            <img src="./img/team/lilly-crop.jpg" alt="">
             <div>
-              <h4>Maury Mason</h4>
+              <h4>Lillian Mason</h4>
 
             </div>
           </div>
