--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ facing hardship due merely to the circumstances of their birth</p>
         <div class="column">
           <div class="column-1">
 
-            <img src="./img/Nepal/begnas-boat-1.jpg" alt="">
+            <img src="./img/Nepal/begnas-boat-crop.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -146,7 +146,7 @@ facing hardship due merely to the circumstances of their birth</p>
           </a>
         </div>
         <div class="gal gal-2">
-          <a href="./img/Nepal/villager-workers.jpg" 
+          <a href="./img/Nepal/villager-workers-crop.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
@@ -154,7 +154,7 @@ facing hardship due merely to the circumstances of their birth</p>
         </div>
 
         <div class="gal gal-3">
-          <a href="./img/Nepal/villagers-4.jpg" 
+          <a href="./img/Nepal/villagers-4-crop.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
@@ -183,14 +183,14 @@ facing hardship due merely to the circumstances of their birth</p>
         </div>
         
         <div class="gal gal-7">
-          <a href="./img/Nepal/buddha.jpg" 
+          <a href="./img/Nepal/buddha-crop.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-8">
-          <a href="./img/Nepal/monks.jpg" 
+          <a href="./img/Nepal/monks-crop.jpg" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
@@ -213,7 +213,7 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="./img/Nepal/villagers-1.jpg" alt="">
+            <img src="./img/Nepal/villagers-1-crop.jpg" alt="">
           </div>
         </div>
         <div class="column">
