--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ facing hardship due merely to the circumstances of their birth</p>
       <section id="team" class="team">
         <div class="flex-items">
           <div class="president">
-            <img src="./img/team/hair.jpg" alt="">
+            <img src="./img/team/hair-crop.jpg" alt="">
             <div>
               <h4>Robbie Prokop</h4>
 
@@ -579,32 +579,34 @@ facing hardship due merely to the circumstances of their birth</p>
         <div class="row">
           <div class="column">
             <div class="column-1">
-              <img src="./img/contact/phone-booth.jpg" alt="">
+              <img src="./img/contact/phone-booth-crop.jpg" alt="">
             </div>
           </div>
           <div class="column">
             <div class="column-2 .bg-light">
               <h2>Get in Touch</h2>
-              <form name="contact" method="POST" data-netlify="true" class="contact-form">
-                <div class="form-control">
-                  <label for="name"></label>
-                  <input type="text" name="name" id="name" placeholder="Name">
+              <form method="POST" data-netlify="true" data-netlify-recaptcha="true" class="contact-form">
+                <div>
+                  <div class="form-control">
+                    <label for="name"></label>
+                    <input type="text" name="name" id="name" placeholder="Name">
+                  </div>
+                  <div class="form-control">
+                    <label for="email"></label>
+                    <input type="text" name="email" id="email" placeholder="Email">
+                  </div>
+                  <div class="form-control">
+                    <label for="phone"></label>
+                    <input type="text" name="phone" id="phone" placeholder="Phone">
+                  </div>
+                  <div class="form-control message">
+                    <label for="message"></label>
+                    <textarea name="message" id="subject" placeholder="Write a Message"></textarea>
+                  </div>
+                  <div class="field">
+                    <div data-netlify-recaptcha="true"></div>
+                  </div>
                 </div>
-                <div class="form-control">
-                  <label for="email"></label>
-                  <input type="text" name="email" id="email" placeholder="Email">
-                </div>
-                <div class="form-control">
-                  <label for="phone"></label>
-                  <input type="text" name="phone" id="phone" placeholder="Phone">
-                </div>
-                <div class="form-control message">
-                  <label for="message"></label>
-                  <textarea name="message" id="subject" placeholder="Write a Message"></textarea>
-                </div>
-                <!-- <div class="field">
-                  <div data-netlify-recaptcha="true"></div>
-                </div> -->
                 <button type="submit" class="btn btn-contact">Send</button>
               </form>
             </div>
