--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ facing hardship due merely to the circumstances of their birth</p>
         <div class="row">
           <div class="column">
             <div class="column-1">
-              <img src="./img/contact/phone-booth-crop.jpg" alt="">
+              <img src="./img/phone-booth-crop.jpg" alt="">
             </div>
           </div>
           <div class="column">
