--- a/index.html
+++ b/index.html
@@ -585,8 +585,8 @@ facing hardship due merely to the circumstances of their birth</p>
           <div class="column">
             <div class="column-2 .bg-light">
               <h2>Get in Touch</h2>
-              <form method="POST" data-netlify="true" data-netlify-recaptcha="true" class="contact-form">
-                <div>
+              <form method="POST" data-netlify="true" data-netlify-recaptcha="true">
+                <div class="contact-form">
                   <div class="form-control">
                     <label for="name"></label>
                     <input type="text" name="name" id="name" placeholder="Name">
