--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@ facing hardship due merely to the circumstances of their birth</p>
           <div class="column">
             <div class="column-2 .bg-light">
               <h2>Get in Touch</h2>
-              <form method="POST" data-netlify="true" data-netlify-recaptcha="true">
+              <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
                 <div class="contact-form">
                   <div class="form-control">
                     <input type="text" name="name" class="name" placeholder="Name">
@@ -596,7 +596,7 @@ facing hardship due merely to the circumstances of their birth</p>
                       <div data-netlify-recaptcha="true"></div>
                     </div>
                   </div>
-                  <button type="submit" class="btn btn-contact">Send</button>
+                  <button type="submit">Send</button>
                   
                 </div>
               </form>
