--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Nepal Life Improvement Foundation, NLIF, Charity, NGO, nepallife, Nepal, Donate, Donation, Maury Mason, Robbie Prokop, Lilly Mason, Villagers, Help, Give, Improvement, Development, Growth, Gift, Benefit, Support, Projects,">
+  <meta name="author" content="Robbie Prokop, Maury Mason, Lilly Mason">
+  <meta name="description" content="Nepal Life Improvement Foundation">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/style.css">
