--- a/index.html
+++ b/index.html
@@ -120,13 +120,14 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row focus">
         <div class="column">
           <div class="column-1">
-            <img src="./img/Nepal/landslide-3.jpeg" alt="">
+            <img src="./img/Past-Help/begnas-yoga-1.webp" alt="">
           </div>
         </div>
         <div class="column">
           <div class="column-2">
-            <h2>Landslide Restoration</h2>
-            <p>Monsoon season is a tough time of year for many villagers in Nepal. Not only is it the low tourist season, which means lower income for people who already suffer economical difficulties, but it is also a time when many landslides occur. Sometimes the landslides are small enough that nobody gets harmed, but other times landslides bring houses down the side the side of a mountain. This can leave the villagers homeless, with very little they can do to get back on their feet. One of our main focuses is to fortify at risk homes before the end of the monsoon season. 
+            <h2>Establishment of NLIF Headquaters</h2>
+            <p>
+              With many projects already complete, and many more projects to come, a headquarters was needed. We were fortunate to secure a 2 year lease of a building that was not being used. The money from our rent will go towards supporting a family in the village. Monthly donations will help us to pay for the headquarters, and with an extra 2 rooms, we are now able to house volunteers.
             </p>
             <a href="#donate-main" class="btn btn-outline">
               <i class="fas fa-chevron-right"></i>  Donate Now</a>
