--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
             <div class="category category-inf">Infrastructure</div>
             <h3>Landslide Kitchen</h3>
             <p>
-              Kitchen built, for a family of six, to replace the one they lost in a landslide.
+              After losing their kitchen in a landslide, this family of six was at a loss. With generous donations from numerous people, we were abe to build a functional kitchen for this family.
             </p>
             <img src="img/Past-Help/kitchen.jpg" alt="">
           </article>
@@ -114,6 +114,22 @@
               </p>
             </div>
             <img src="img/Past-Help/stupa-2.jpg" alt="" />
+          </article>
+          <article class="card">
+            <div class="category category-inf">Infrastructure</div>
+            <h3>Landslide Restoration</h3>
+            <p>
+              Restoring and repairing damage cause by landslides during the 2020 monsoon season. We also made some reinforments on at risk homes.
+            </p>
+            <img src="img/Past-Help/landslide-3.jpeg" alt="">
+          </article>
+          <article class="card">
+            <img src="img/Past-Help/begnas-yoga-1.webp" alt="">
+            <div class="category category-inf">Infrastructure</div>
+            <h3>Establisment of NLIF Headquaters</h3>
+            <p>
+              With all the help that has been given and that will continue to be given, a headquaters was much needed. We have aquired a building and have signed a 2 year lease. Donations will be needed for the cost of the rent and utilities.
+            </p>
           </article>
         </div>
       </div>
