--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="Nepal Life Improvement Foundation, NLIF, Charity, NGO, nepallife, Nepal, Donate, Donation, Maury Mason, Robbie Prokop, Lilly Mason, Villagers, Help, Give, Improvement, Development, Growth, Gift, Benefit, Support, Projects,">
   <meta name="author" content="Robbie Prokop, Maury Mason, Lilly Mason">
   <meta name="description" content="Nepal Life Improvement Foundation">
-
+  <meta name="google-site-verification" content="T1DPOFo7gv6vX0tBv3P16foDh2wync4wwa9sSPvnv7E" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/style.css">
