--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ facing hardship due merely to the circumstances of their birth</p>
         <div class="column">
           <div class="column-1">
 
-            <img src="./img/Nepal/begnas-boat-crop.jpg" alt="">
+            <img src="./img/Nepal/webp/begnas-boat-crop.webp" alt="">
           </div>
         </div>
         <div class="column">
@@ -144,14 +144,14 @@ facing hardship due merely to the circumstances of their birth</p>
 
       <div class="gal-grid">
         <div class="gal gal-1">
-          <a href="./img/mountain-4.jpg" 
+          <a href="./img/webp/mountain-4.webp" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-2">
-          <a href="./img/Nepal/villager-workers-crop.jpg" 
+          <a href="./img/Nepal/webp/villager-workers-crop.webp" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
@@ -159,28 +159,28 @@ facing hardship due merely to the circumstances of their birth</p>
         </div>
 
         <div class="gal gal-3">
-          <a href="./img/Nepal/villagers-4-crop.jpg" 
+          <a href="./img/Nepal/webp/villagers-4-crop.webp" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
           </a> 
         </div>
         <div class="gal gal-4">
-          <a href="./img/Nepal/begnas-lake.jpg" 
+          <a href="./img/Nepal/webp/begnas-lake.webp" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
           </a>
         </div>        
         <div class="gal gal-5">
-          <a href="./img/Nepal/bandipur.jpg" 
+          <a href="./img/Nepal/webp/bandipur.webp" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-6">
-          <a href="./img/mountain-3.jpg" 
+          <a href="./img/webp/mountain-3.webp" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
@@ -188,21 +188,21 @@ facing hardship due merely to the circumstances of their birth</p>
         </div>
         
         <div class="gal gal-7">
-          <a href="./img/Nepal/buddha-crop.jpg" 
+          <a href="./img/Nepal/webp/buddha-crop.webp" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-8">
-          <a href="./img/Nepal/monks-crop.jpg" 
+          <a href="./img/Nepal/webp/monks-crop.webp" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-9">
-          <a href="./img/Nepal/misty-village.jpg" 
+          <a href="./img/Nepal/webp/misty-village.webp" 
           data-lightbox="photos" 
           data-title="">
           <img src="" alt="">
@@ -218,7 +218,7 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="./img/Nepal/villagers-1-crop.jpg" alt="">
+            <img src="./img/Nepal/webp/villagers-1-crop.webp" alt="">
           </div>
         </div>
         <div class="column">
@@ -555,21 +555,21 @@ facing hardship due merely to the circumstances of their birth</p>
       <section id="team" class="team">
         <div class="flex-items">
           <div class="president">
-            <img src="./img/team/hair-crop.jpg" alt="">
+            <img src="./img/team/webp/hair-crop.webp" alt="">
             <div>
               <h4>Robbie Prokop</h4>
 
             </div>
           </div>
           <div class="vp">
-            <img src="./img/team/maury-lives-crop.jpg" alt="">
+            <img src="./img/team/webp/maury-lives-crop.webp" alt="">
             <div>
               <h4>Maury Mason</h4>
 
             </div>
           </div>
           <div class="dc">
-            <img src="./img/team/lilly-crop.jpg" alt="">
+            <img src="./img/team/webp/lilly-crop.webp" alt="">
             <div>
               <h4>Lillian Mason</h4>
 
@@ -584,7 +584,7 @@ facing hardship due merely to the circumstances of their birth</p>
         <div class="row">
           <div class="column">
             <div class="column-1">
-              <img src="./img/phone-booth-crop.jpg" alt="">
+              <img src="./img/webp/phone-booth-crop.webp" alt="">
             </div>
           </div>
           <div class="column">
@@ -622,13 +622,8 @@ facing hardship due merely to the circumstances of their birth</p>
     </div>
   </footer>
 
-  <script
-    src="https://code.jquery.com/jquery-3.5.0.min.js"
-    integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
-    crossorigin="anonymous">
-  </script>
+  
   <script src="js/lightbox.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script>
   $( function() {
     $( "#time" ).selectmenu();
