--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
         <h2 class="py-1">Past Projects</h2>
         <div class="articles-container">
           <article class="card">
-            <img src="img/Past-Help/bathroom.jpg" alt="" />
+            <img src="img/Past-Help/webp/bathroom.webp" alt="" />
             <div>
               <div class="category category-hea card-center">Health</div>
               <h3>Bathroom</h3>
@@ -75,7 +75,7 @@
             </div>
           </article>
           <article class="card">
-            <img src="img/Past-Help/food-drive.jpg" alt="">
+            <img src="img/Past-Help/webp/food-drive.webp" alt="">
             <div class="category category-hea card-center">Health</div>
             <h3>COVID-19 Food Drive</h3>
             <p>
@@ -88,10 +88,10 @@
             <p>
               After losing their kitchen in a landslide, this family of six was at a loss. With generous donations from numerous people, we were abe to build a functional kitchen for this family.
             </p>
-            <img src="img/Past-Help/kitchen.jpg" alt="">
+            <img src="img/Past-Help/webp/kitchen.webp" alt="">
           </article>
           <article class="card">
-            <img src="img/Past-Help/pathway.jpg" alt="">
+            <img src="img/Past-Help/webp/pathway.webp" alt="">
             <div class="category category-inf">Infrastructure</div>
             <h3>Pathway Restoration</h3>
             <p>
@@ -113,7 +113,7 @@
                 Repairing the roof of the Gumba Stupa Buddhist Temple, damaged from monsoon rains. An important cultural and spiritual centre. The majority of the labour was done by volunteers from the village. 
               </p>
             </div>
-            <img src="img/Past-Help/stupa-2.jpg" alt="" />
+            <img src="img/Past-Help/webp/stupa-2.webp" alt="" />
           </article>
           <article class="card">
             <div class="category category-inf">Infrastructure</div>
@@ -124,7 +124,7 @@
             <img src="img/Past-Help/landslide-3.jpeg" alt="">
           </article>
           <article class="card">
-            <img src="img/Past-Help/begnas-yoga-1.webp" alt="">
+            <img src="img/Past-Help/webp/begnas-yoga-1.webp" alt="">
             <div class="category category-inf">Infrastructure</div>
             <h3>Establisment of NLIF Headquaters</h3>
             <p>
