--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row focus">
         <div class="column">
           <div class="column-1">
-            <img src="./img/Past-Help/begnas-yoga-1.webp" alt="">
+            <img src="./img/Past-Help/webp/begnas-yoga-1.webp" alt="">
           </div>
         </div>
         <div class="column">
@@ -623,43 +623,9 @@ facing hardship due merely to the circumstances of their birth</p>
   </footer>
 
   
-  <script src="js/lightbox.min.js"></script>
-  <script>
-  $( function() {
-    $( "#time" ).selectmenu();
- 
-    $( "#files" ).selectmenu();
+  <script src="./js/lightbox.min.js"></script>
+  <script src='./js/main.js'></script>
 
-    $( "select[name=time]" ).selectmenu({ width : 'auto'});
 
-    $( "input[type=radio]" ).checkboxradio();
-
-    $( "input[type=radio]" ).checkboxradio({ width : 'auto'});
-  } );
-  </script>
-  
-  <script>
-
-  $( function() {
-      $( "#time" ).selectmenu();
-  
-      $( "#files" ).selectmenu();
-    } );
-          // Smooth Scrolling
-    $('#navbar a, .btn').on('click', function (e) {
-      if (this.hash !== '') {
-        e.preventDefault();
-
-        const hash = this.hash;
-
-        $('html, body').animate(
-          {
-            scrollTop: $(hash).offset().top - 100,
-          },
-          800
-        );
-      }
-    });
-  </script>
 </body>
 </html>
