--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ facing hardship due merely to the circumstances of their birth</p>
         <div class="column">
           <div class="column-1">
 
-            <img src="./img/Nepal/webp/begnas-boat-crop.webp" alt="">
+            <img src="./images/Nepal/webp/begnas-boat-crop.webp" alt="">
           </div>
         </div>
         <div class="column">
@@ -122,7 +122,7 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row focus">
         <div class="column">
           <div class="column-1">
-            <img src="./img/Past-Help/webp/begnas-yoga-1.webp" alt="">
+            <img src="./images/Past-Help/webp/begnas-yoga-1.webp" alt="">
           </div>
         </div>
         <div class="column">
@@ -146,67 +146,67 @@ facing hardship due merely to the circumstances of their birth</p>
 
       <div class="gal-grid">
         <div class="gal gal-1">
-          <a href="./img/webp/mountain-4.webp" 
+          <a href="./images/webp/mountain-4.webp" 
           data-lightbox="photos" 
-          data-title="">
+          data-title="Himalayas of Nepal">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-2">
-          <a href="./img/Nepal/webp/villager-workers-crop.webp" 
+          <a href="./images/Nepal/webp/villager-workers-crop.webp" 
           data-lightbox="photos" 
-          data-title="">
+          data-title="Village Workers">
           <img src="" alt="">
           </a>
         </div>
 
         <div class="gal gal-3">
-          <a href="./img/Nepal/webp/villagers-4-crop.webp" 
+          <a href="./images/Nepal/webp/villagers-4-crop.webp" 
           data-lightbox="photos" 
-          data-title="">
+          data-title="Daily Village Work">
           <img src="" alt="">
           </a> 
         </div>
         <div class="gal gal-4">
-          <a href="./img/Nepal/webp/begnas-lake.webp" 
+          <a href="./images/Nepal/webp/begnas-lake.webp" 
           data-lightbox="photos" 
-          data-title="">
+          data-title="Begnas Lake">
           <img src="" alt="">
           </a>
         </div>        
         <div class="gal gal-5">
-          <a href="./img/Nepal/webp/bandipur.webp" 
+          <a href="./images/Nepal/webp/bandipur.webp" 
           data-lightbox="photos" 
-          data-title="">
+          data-title="Bandipur">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-6">
-          <a href="./img/webp/mountain-3.webp" 
+          <a href="./images/webp/mountain-3.webp" 
           data-lightbox="photos" 
-          data-title="">
+          data-title="Annapurna Mountain">
           <img src="" alt="">
           </a> 
         </div>
         
         <div class="gal gal-7">
-          <a href="./img/Nepal/webp/buddha-crop.webp" 
+          <a href="./images/Nepal/webp/buddha-crop.webp" 
           data-lightbox="photos" 
-          data-title="">
+          data-title="Buddhist Country">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-8">
-          <a href="./img/Nepal/webp/monks-crop.webp" 
+          <a href="./images/Nepal/webp/monks-crop.webp" 
           data-lightbox="photos" 
-          data-title="">
+          data-title="Honorable Monks">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-9">
-          <a href="./img/Nepal/webp/misty-village.webp" 
+          <a href="./images/Nepal/webp/misty-village.webp" 
           data-lightbox="photos" 
-          data-title="">
+          data-title="Nepalese Village">
           <img src="" alt="">
           </a> 
         </div>
@@ -220,7 +220,7 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row">
         <div class="column">
           <div class="column-1">
-            <img src="./img/Nepal/webp/villagers-1-crop.webp" alt="">
+            <img src="./images/Nepal/webp/villagers-1-crop.webp" alt="">
           </div>
         </div>
         <div class="column">
@@ -557,21 +557,21 @@ facing hardship due merely to the circumstances of their birth</p>
       <section id="team" class="team">
         <div class="flex-items">
           <div class="president">
-            <img src="./img/team/webp/hair-crop.webp" alt="">
+            <img src="./images/team/webp/hair-crop.webp" alt="">
             <div>
               <h4>Robbie Prokop</h4>
 
             </div>
           </div>
           <div class="vp">
-            <img src="./img/team/webp/maury-lives-crop.webp" alt="">
+            <img src="./images/team/webp/maury-lives-crop.webp" alt="">
             <div>
               <h4>Maury Mason</h4>
 
             </div>
           </div>
           <div class="dc">
-            <img src="./img/team/webp/lilly-crop.webp" alt="">
+            <img src="./images/team/webp/lilly-crop.webp" alt="">
             <div>
               <h4>Lillian Mason</h4>
 
@@ -586,7 +586,7 @@ facing hardship due merely to the circumstances of their birth</p>
         <div class="row">
           <div class="column">
             <div class="column-1">
-              <img src="./img/webp/phone-booth-crop.webp" alt="">
+              <img src="./images/webp/phone-booth-crop.webp" alt="">
             </div>
           </div>
           <div class="column">
@@ -624,9 +624,25 @@ facing hardship due merely to the circumstances of their birth</p>
     </div>
   </footer>
 
-  
-  <script src="./js/lightbox.min.js"></script>
-  <script src='./js/main.js'></script>
+  <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="js/lightbox.min.js"></script>
+  <script>
+    // Smooth Scrolling
+    $('#navbar a, .btn').on('click', function (e) {
+        if (this.hash !== '') {
+          e.preventDefault();
+ 
+          const hash = this.hash;
+ 
+          $('html, body').animate(
+            {
+              scrollTop: $(hash).offset().top - 100,
+            },
+            800
+          );
+        }
+      });
+  </script>
 
 
 </body>
