--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="author" content="Robbie Prokop, Maury Mason, Lilly Mason">
   <meta name="description" content="Nepal Life Improvement Foundation. Improving the lives of Nepalese villagers one project at a time. Make a donation for the benefit of others">
   <meta name="google-site-verification" content="T1DPOFo7gv6vX0tBv3P16foDh2wync4wwa9sSPvnv7E" />
+  <link rel="shortcut icon" type="image/x-icon" href="./icons/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
   <meta name="yandex-verification" content="2ecb50d890795f0c" />
   <meta name="msvalidate.01" content="40FDF646A6A589717E0209625D0C26D4" />
