--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="./icons/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" media="screen and (max-width: 984px)" href="css/mobile.css">
@@ -143,6 +143,9 @@
       </div>
     </footer>
 
+    <script>
+      
+    </script>
     <script src="main.js"></script>
   </body>
 </html>
