--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
         <h2 class="py-1">Past Projects</h2>
         <div class="articles-container">
           <article class="card">
-            <img src="img/Past-Help/webp/bathroom.webp" alt="" />
+            <img src="images/Past-Help/webp/bathroom.webp" alt="" />
             <div>
               <div class="category category-hea card-center">Health</div>
               <h3>Bathroom</h3>
@@ -75,7 +75,7 @@
             </div>
           </article>
           <article class="card">
-            <img src="img/Past-Help/webp/food-drive.webp" alt="">
+            <img src="images/Past-Help/webp/food-drive.webp" alt="">
             <div class="category category-hea card-center">Health</div>
             <h3>COVID-19 Food Drive</h3>
             <p>
@@ -88,10 +88,10 @@
             <p>
               After losing their kitchen in a landslide, this family of six was at a loss. With generous donations from numerous people, we were abe to build a functional kitchen for this family.
             </p>
-            <img src="img/Past-Help/webp/kitchen.webp" alt="">
+            <img src="images/Past-Help/webp/kitchen.webp" alt="">
           </article>
           <article class="card">
-            <img src="img/Past-Help/webp/pathway.webp" alt="">
+            <img src="images/Past-Help/webp/pathway.webp" alt="">
             <div class="category category-inf">Infrastructure</div>
             <h3>Pathway Restoration</h3>
             <p>
@@ -113,7 +113,15 @@
                 Repairing the roof of the Gumba Stupa Buddhist Temple, damaged from monsoon rains. An important cultural and spiritual centre. The majority of the labour was done by volunteers from the village. 
               </p>
             </div>
-            <img src="img/Past-Help/webp/stupa-2.webp" alt="" />
+            <img src="images/Past-Help/webp/stupa-2.webp" alt="" />
+          </article>
+          <article class="card">
+            <img src="images/Past-Help/webp/windows.webp" alt="">
+            <div class="category category-inf">Infrastructure</div>
+            <h3>Window Installation</h3>
+            <p>
+              A local villager was enduring the monsoon seasons, year after year, without any windows. Insects, weather, and snakes were a constant threat to her safety. We purchased and installed new windows for this kind lady. Her gratitude goes beyond what words can express.
+            </p>
           </article>
           <article class="card">
             <div class="category category-inf">Infrastructure</div>
@@ -121,16 +129,17 @@
             <p>
               Restoring and repairing damage cause by landslides during the 2020 monsoon season. We also made some reinforments on at risk homes.
             </p>
-            <img src="img/Past-Help/landslide-3.jpeg" alt="">
+            <img src="images/Past-Help/webp/landslide-3.webp" alt="">
           </article>
           <article class="card">
-            <img src="img/Past-Help/webp/begnas-yoga-1.webp" alt="">
+            <img src="images/Past-Help/webp/begnas-yoga-1.webp" alt="">
             <div class="category category-inf">Infrastructure</div>
             <h3>Establisment of NLIF Headquaters</h3>
             <p>
               With all the help that has been given and that will continue to be given, a headquaters was much needed. We have aquired a building and have signed a 2 year lease. Donations will be needed for the cost of the rent and utilities.
             </p>
           </article>
+          
         </div>
       </div>
     </section>
