--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ facing hardship due merely to the circumstances of their birth</p>
           <div class="column-1">
             <picture>
               <source srcset="./images/Past-Help/webp/begnas-yoga-1.webp">
+              <source srcset="./images/jpg/Past-Help/begnas-yoga.jpg">
               <img src="./images/jpg/Past-Help/begnas-yoga.jpg" alt="">
             </picture>
           </div>
